--- a/src/main/resources/templates/generateUrl.html
+++ b/src/main/resources/templates/generateUrl.html
@@ -10,8 +10,8 @@
 </div>
 <h1>Shortern your URL here!</h1>
 <form action="#" th:action="@{/}" th:object="${urlRequest}" method="post">
-    <p>Url: <input type="text" th:field="*{url}" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    <h3>Url: <input size="80%" type="text" th:field="*{url}" th:required="required"/></h3>
+    <p><input type="submit" value="Submit"/> <input type="reset" value="Reset" /></p>
 </form>
 </body>
 </html>
