--- a/src/main/resources/templates/generateUrlResponse.html
+++ b/src/main/resources/templates/generateUrlResponse.html
@@ -7,12 +7,12 @@
 <body>
 <h1>Shortern your URL here!</h1>
 <form action="#" th:action="@{/}" th:object="${urlRequest}" method="post">
-    <h3>Url: <input size="80%" type="text" th:field="*{url}" /></h3>
+    <h3>Url: <input size="80%" type="text" th:field="*{url}" th:required="required"/></h3>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 <div th:switch="${errorMessage}">
     <div th:case="''">
-        <p style="color:green;font-weight: bold" th:text= "'FULL URL: ' + ${urlResponse.fullUrl}" />
+        <p style="font-weight: bold" th:text= "'FULL URL: ' + ${urlResponse.fullUrl}" />
         <p style="color:green;font-weight: bold" th:text= "'Shortened URL: ' + ${urlResponse.shortenedUrl}" />
     </div>
     <div th:case="'invalid Url'">
